--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,22 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Eclipse 
+.classpath
+.project
+.settings*
+
 # Package Files #
 *.jar
 *.war
 *.ear
 
+# Editor
+*.swp
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
 /target/
+
+/src/main/resources/
