--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,24 @@
   		<version>2.4</version>
   	</dependency>
   	<dependency>
-  		<groupId>jitk</groupId>
-  		<artifactId>jitk-tps</artifactId>
-  		<version>1.1.2</version>
-  	</dependency>
-  	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer_fiji</artifactId>
-  		<version>1.0.16</version>
+  		<version>1.0.15</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>jitk</groupId>
+  		<artifactId>jitk-tps</artifactId>
+  		<version>1.1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>mpicbg</groupId>
+  		<artifactId>mpicbg</artifactId>
+  		<version>1.0.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>net.imglib2</groupId>
+  		<artifactId>imglib2-ij</artifactId>
+  		<version>2.0.1</version>
   	</dependency>
   </dependencies>
 </project>
