--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
   <artifactId>bigwarp_fiji</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
   <name>bigwarp_fiji</name>
   <description>A tool for manual pointwise deformable registration using A tool for A A tool for manual pointwise deformable registration using bigdataviewer. </description>
   <parent>
@@ -41,6 +40,7 @@
   	<dependency>
   		<groupId>jitk</groupId>
   		<artifactId>jitk-tps</artifactId>
+  		<version>1.2.0</version>
   	</dependency>
   	<dependency>
   		<groupId>net.imglib2</groupId>
@@ -61,4 +61,5 @@
   		<version>1.0.14</version>
   	</dependency>
   </dependencies>
+  <version>1.0.0</version>
 </project>
