--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer-core</artifactId>
-  		<version>1.2.2</version>
+  		<version>2.0.2-SNAPSHOT</version>
   	</dependency>
   	<dependency>
   		<groupId>net.imglib2</groupId>
@@ -57,7 +57,7 @@
   	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer_fiji</artifactId>
-  		<version>1.0.14</version>
+  		<version>2.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <version>1.0.1-SNAPSHOT</version>
