--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <description>A tool for manual pointwise deformable registration using A tool for A A tool for manual pointwise deformable registration using bigdataviewer. </description>
   <parent>
   	<groupId>sc.fiji</groupId>
-  	<artifactId>pom-fiji</artifactId>
-  	<version>15.5.0</version>
+  	<artifactId>pom-bigdataviewer</artifactId>
+  	<version>2.2.0</version>
   </parent>
   <repositories>
         <repository>
@@ -27,7 +27,6 @@
   	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer-core</artifactId>
-  		<version>2.0.2-SNAPSHOT</version>
   	</dependency>
   	<dependency>
   		<groupId>net.imglib2</groupId>
@@ -40,7 +39,7 @@
   	<dependency>
   		<groupId>jitk</groupId>
   		<artifactId>jitk-tps</artifactId>
-  		<version>1.2.1-SNAPSHOT</version>
+  		<version>1.2.1</version><!--$NO-MVN-MAN-VER$-->
   	</dependency>
   	<dependency>
   		<groupId>net.imglib2</groupId>
@@ -57,7 +56,6 @@
   	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer_fiji</artifactId>
-  		<version>2.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <version>1.0.1-SNAPSHOT</version>
