--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,5 @@
   		<artifactId>bigdataviewer_fiji</artifactId>
   	</dependency>
   </dependencies>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
 </project>
