--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
   	<groupId>sc.fiji</groupId>
   	<artifactId>pom-bigdataviewer</artifactId>
-  	<version>2.2.0</version>
+  	<version>2.2.1</version>
   </parent>
   <repositories>
         <repository>
@@ -56,6 +56,11 @@
   	<dependency>
   		<groupId>sc.fiji</groupId>
   		<artifactId>bigdataviewer_fiji</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jdom</groupId>
+  		<artifactId>jdom2</artifactId>
+  		<version>2.0.6</version>
   	</dependency>
   </dependencies>
   <version>1.1.1-SNAPSHOT</version>
