--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
   <artifactId>bigwarp_fiji</artifactId>
   <name>bigwarp_fiji</name>
-  <description>A tool for manual pointwise deformable registration using A tool for A A tool for manual pointwise deformable registration using bigdataviewer. </description>
+  <description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
   <parent>
   	<groupId>sc.fiji</groupId>
   	<artifactId>pom-bigdataviewer</artifactId>
