POM: tidy up order of configuration blocks
Accomplished using:
    mvn tidy:pom

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>bigwarp_fiji</artifactId>
-	<name>bigwarp_fiji</name>
-	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
+
 	<parent>
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-bigdataviewer</artifactId>
 		<version>2.2.2</version>
 	</parent>
+
+	<artifactId>bigwarp_fiji</artifactId>
+	<version>1.1.1-SNAPSHOT</version>
+
+	<name>bigwarp_fiji</name>
+	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
+
 	<repositories>
 		<repository>
 			<id>imagej.public</id>
@@ -58,5 +64,4 @@
 			<artifactId>bigdataviewer_fiji</artifactId>
 		</dependency>
 	</dependencies>
-	<version>1.1.1-SNAPSHOT</version>
 </project>
