Major changes to 'warped points' infrastructure.
Transform is re-estimated on every change.
Depend on jitk-tps 1.2.2-SNAPSHOT in order to compute inverse.
Don't need to be in landmark mode to force transform estimation.
Simplify undo/redo actions.

--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>jitk</groupId>
 			<artifactId>jitk-tps</artifactId>
-			<version>1.2.1</version><!--$NO-MVN-MAN-VER$-->
+			<version>1.2.2-SNAPSHOT</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
