--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>bigwarp_fiji</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>2.0.0</version>
 
 	<name>bigwarp_fiji</name>
 	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>jitk</groupId>
 			<artifactId>jitk-tps</artifactId>
-			<version>1.2.2-SNAPSHOT</version><!--$NO-MVN-MAN-VER$-->
+			<version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
