POM: extend pom-fiji, not pom-bigdataviewer
We instead inherit the pom-bigdataviewer BOM using import scope.
This is more flexible.

See also:
https://github.com/fiji/pom-fiji/commit/2086017bead2cf3e9f079d86a835a8c8973beb98

This uses pom-fiji 19.0.0, which upgrades many dependencies.
In particular, we now use the SciJava fork of Java 3D 1.6,
which requires Java 7. Hence, this plugin now requires Java 7.

The complete list of dependency updates follows.

== Upgraded dependencies ==

* 3D_Viewer: 3.1.0 -> 4.0.1
* SPIM_Registration: 3.0.0 -> 4.0.0
* bigdataviewer-core: 2.0.0 -> 2.1.0
* guava: 17.0 -> 18.0
* ij1-patcher: 0.12.2 -> 0.12.3
* ij: 1.50d -> 1.50e
* imagej-common: 0.18.0 -> 0.19.0
* imglib2: 2.4.0 -> 2.5.0
* legacy-imglib1: 1.1.4-DEPRECATED -> 1.1.5
* mines-jtk: 20100113 -> 20151125
* mpicbg: 1.0.2 -> 1.1.1
* native-lib-loader: 2.1.1 -> 2.1.3
* scifio: 0.25.1 -> 0.27.1
* scijava-common: 2.48.0 -> 2.50.1

== New dependencies ==

* gluegen-rt: 2.3.2 (from 3D Viewer)
* j3dcore: 1.6.0-scijava-2 (from 3D Viewer)
* j3dutils: 1.6.0-scijava-2 (from 3D Viewer)
* jogl-all: 2.3.2 (from 3D Viewer)
* vecmath: 1.6.0-scijava-2 (from 3D Viewer)

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,9 @@
 
 	<parent>
 		<groupId>sc.fiji</groupId>
-		<artifactId>pom-bigdataviewer</artifactId>
-		<version>2.2.2</version>
+		<artifactId>pom-fiji</artifactId>
+		<version>19.0.0</version>
+		<relativePath />
 	</parent>
 
 	<artifactId>bigwarp_fiji</artifactId>
@@ -93,6 +94,10 @@
 		<url>http://jenkins.imagej.net/job/bigwarp/</url>
 	</ciManagement>
 
+	<properties>
+		<scijava.jvm.version>1.7</scijava.jvm.version>
+	</properties>
+
 	<repositories>
 		<repository>
 			<id>imagej.public</id>
@@ -100,6 +105,17 @@
 		</repository>
 	</repositories>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>sc.fiji</groupId>
+				<artifactId>pom-bigdataviewer</artifactId>
+				<version>${pom-bigdataviewer.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
