--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
 		<dependency>
 			<groupId>jitk</groupId>
 			<artifactId>jitk-tps</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
