--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
