--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>bigwarp_fiji</artifactId>
-	<version>2.1.4</version>
+	<version>2.1.5-SNAPSHOT</version>
 
 	<name>bigwarp_fiji</name>
 	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
