--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,8 @@
 		<license.licenseName>gpl_v2</license.licenseName>
 		<license.copyrightOwners>Howard Hughes Medical Institute.</license.copyrightOwners>
 		<license.projectName>BigWarp plugin for Fiji.</license.projectName>
+
+		<jcommander.version>1.48</jcommander.version>
 	</properties>
 
 	<repositories>
@@ -156,7 +158,7 @@
 		<dependency>
 			<groupId>com.beust</groupId>
 			<artifactId>jcommander</artifactId>
-			<version>1.48</version>
+			<version>${jcommander.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ome</groupId>
