--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>15.0.0</version>
+		<version>16.1.0</version>
 		<relativePath />
 	</parent>
 
@@ -99,10 +99,8 @@
 		<license.copyrightOwners>Howard Hughes Medical Institute.</license.copyrightOwners>
 		<license.projectName>BigWarp plugin for Fiji.</license.projectName>
 
+		<ejml.version>0.24</ejml.version>
 		<jcommander.version>1.48</jcommander.version>
-		<!-- TEMP: until pom-scijava 16.0.0 is released. -->
-		<opencsv.version>3.9</opencsv.version>
-		<jitk-tps.version>2.1.1</jitk-tps.version>
 	</properties>
 
 	<repositories>
@@ -116,7 +114,7 @@
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
 			<artifactId>ejml</artifactId>
-			<version>0.24</version>
+			<version>${ejml.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -137,7 +135,6 @@
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>${opencsv.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mpicbg</groupId>
