add plugin for applying a transform
See #42

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -10,3 +10,4 @@
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
 Plugins>BigDataViewer, "Big Warp", bdv.ij.BigWarpImagePlusPlugIn
+Plugins>BigDataViewer, "Big Warp Apply", bdv.ij.ApplyBigwarpPlugin
