--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>17.1.1</version>
+		<version>21.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -101,8 +101,7 @@
 
 		<ejml.version>0.24</ejml.version>
 		<jcommander.version>1.48</jcommander.version>
-
-		<jitk-tps.version>3.0.0</jitk-tps.version>
+		<bigdataviewer-core.version>5.0.0</bigdataviewer-core.version>
 
 		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
 		<releaseProfiles>deploy-to-imagej</releaseProfiles>
