add plugin for conversion to deformation field
See #46

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -11,3 +11,4 @@
 
 Plugins>BigDataViewer, "Big Warp", bdv.ij.BigWarpImagePlusPlugIn
 Plugins>BigDataViewer, "Big Warp Apply", bdv.ij.ApplyBigwarpPlugin
+Plugins>BigDataViewer, "Big Warp to Displacement field", bdv.ij.BigWarpToDeformationFieldPlugIn
