--- a/pom.xml
+++ b/pom.xml
@@ -181,5 +181,10 @@
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2-realtransform</artifactId>
+			<version>2.2.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
