--- a/pom.xml
+++ b/pom.xml
@@ -186,5 +186,14 @@
 			<artifactId>imglib2-realtransform</artifactId>
 			<version>2.2.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>ome</groupId>
+			<artifactId>bio-formats_plugins</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ome</groupId>
+			<artifactId>formats-gpl</artifactId>
+			<version>5.8.2</version>
+		</dependency>
 	</dependencies>
 </project>
