--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<url>https://imagej.net/User:Hanslovsky</url>
 			<properties><id>hanslovsky</id></properties>
 		</contributor>
+		<contributor>
+			<name>Christian Tischer</name>
+			<url>https://imagej.net/User:EMBL-CBA</url>
+			<properties><id>tischi</id></properties>
+		</contributor>
 	</contributors>
 
 	<mailingLists>
