--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
 		<bigdataviewer-vistools.version>1.0.0-beta-20</bigdataviewer-vistools.version>
         <jitk-tps.version>3.0.1</jitk-tps.version>
         <imglib2-realtransform.version>3.0.0</imglib2-realtransform.version>
+		<ui-behaviour.version>2.0.1</ui-behaviour.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
@@ -197,6 +198,10 @@
 					<artifactId>jhdf5</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>ui-behaviour</artifactId>
 		</dependency>
 	</dependencies>
 </project>
