--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
         <jitk-tps.version>3.0.1</jitk-tps.version>
         <imglib2-realtransform.version>3.0.0</imglib2-realtransform.version>
 		<ui-behaviour.version>2.0.1</ui-behaviour.version>
+		<opencsv.version>5.2</opencsv.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
@@ -150,7 +151,6 @@
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>4.6</version>
 		</dependency>
 		<dependency>
 			<groupId>mpicbg</groupId>
