--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>bigwarp_fiji</artifactId>
-	<version>6.0.2-SNAPSHOT</version>
+	<version>6.0.2</version>
 
 	<name>BigWarp plugin for Fiji</name>
 	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
@@ -92,7 +92,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/saalfeldlab/bigwarp</connection>
 		<developerConnection>scm:git:git@github.com:saalfeldlab/bigwarp</developerConnection>
-		<tag>HEAD</tag>
+		<tag>bigwarp_fiji-6.0.2</tag>
 		<url>https://github.com/saalfeldlab/bigwarp</url>
 	</scm>
 	<issueManagement>
