depend on fiji-lib

--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
-			<artifactId>fiji</artifactId>
+			<artifactId>fiji-lib</artifactId>
 		</dependency>
 	</dependencies>
 </project>
