--- a/pom.xml
+++ b/pom.xml
@@ -210,5 +210,15 @@
 			<artifactId>n5-ij</artifactId>
 			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5</artifactId>
+			<version>2.4.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-imglib2</artifactId>
+			<version>3.5.2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
