--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 		<log4j.version>1.2.17</log4j.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 
+		<n5.version>2.5.1</n5.version>
+		<n5-ij.version>3.0.0</n5-ij.version>
+		<n5-imglib2.version>4.1.1</n5-imglib2.version>
+		<n5-hdf5.version>1.4.1</n5-hdf5.version>
+
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
