--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,9 @@
 		<n5-imglib2.version>4.3.0</n5-imglib2.version>
 		<n5-hdf5.version>1.4.1</n5-hdf5.version>
 
-
+		<ui-behaviour.version>2.0.6</ui-behaviour.version>
+		<bigdataviewer-core.version>10.4.1</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-30</bigdataviewer-vistools.version>
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
