POM: fix forum.image.sc tag link
The Discourse software updated the tags path from /tags/ to /tag/.

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 	<mailingLists>
 		<mailingList>
 			<name>Image.sc Forum</name>
-			<archive>https://forum.image.sc/tags/bigwarp</archive>
+			<archive>https://forum.image.sc/tag/bigwarp</archive>
 		</mailingList>
 	</mailingLists>
 
