--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 
 		<n5-ij.version>3.2.1</n5-ij.version>
+		<jitk-tps.version>3.0.3</jitk-tps.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
