--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,6 @@
 
 		<imglib2.version>6.0.0</imglib2.version>
 		<imglib2-realtransform.version>4.0.0</imglib2-realtransform.version>
-		<n5-imglib2.version>5.0.0-SNAPSHOT</n5-imglib2.version>
 
 		<jcommander.version>1.48</jcommander.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
@@ -122,6 +121,7 @@
 		<n5.version>2.5.1</n5.version>
 		<n5-ij.version>3.2.1</n5-ij.version>
 		<n5-hdf5.version>1.4.1</n5-hdf5.version>
+		<!-- <n5-imglib2.version>5.0.0-SNAPSHOT-ngff</n5-imglib2.version> -->
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
@@ -139,6 +139,10 @@
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej</artifactId>
 		</dependency>
 
 		<!-- ImgLib2 dependencies -->
@@ -214,10 +218,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
-			<artifactId>n5-imglib2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-blosc</artifactId>
 		</dependency>
 		<dependency>
@@ -230,10 +230,6 @@
 					<artifactId>imagej</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.janelia.saalfeldlab</groupId>
-			<artifactId>n5-imglib2</artifactId>
 		</dependency>
 
 		<!-- OME dependencies -->
@@ -302,6 +298,11 @@
 		<dependency>
 			<groupId>com.formdev</groupId>
 			<artifactId>flatlaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-imglib2</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Test scope dependencies -->
