--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,7 @@
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5</artifactId>
+			<version>2.5.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
@@ -302,6 +303,7 @@
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-imglib2</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Test scope dependencies -->
@@ -314,6 +316,11 @@
 			<groupId>xmlunit</groupId>
 			<artifactId>xmlunit</artifactId>
 			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>ome</groupId>
+			<artifactId>ome-ngff-java</artifactId>
+			<version>0.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
