--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 		<n5.version>2.5.1</n5.version>
 		<n5-ij.version>3.2.1</n5-ij.version>
 		<n5-hdf5.version>1.4.1</n5-hdf5.version>
-		<!-- <n5-imglib2.version>5.0.0-SNAPSHOT-ngff</n5-imglib2.version> -->
+		<n5-imglib2.version>5.0.0-SNAPSHOT</n5-imglib2.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
