--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,8 @@
 		<jitk-tps.version>3.0.3</jitk-tps.version>
 		<imglib2-realtransform.version>4.0.0</imglib2-realtransform.version>
 
-		<n5.version>2.5.1</n5.version>
-		<n5-ij.version>3.2.1</n5-ij.version>
+		<n5.version>2.5.2-SNAPSHOT</n5.version>
+		<n5-ij.version>3.2.3-SNAPSHOT</n5-ij.version>
 		<n5-hdf5.version>1.4.1</n5-hdf5.version>
 		<!-- <n5-imglib2.version>5.0.0-SNAPSHOT-ngff</n5-imglib2.version> -->
 
