--- a/pom.xml
+++ b/pom.xml
@@ -128,11 +128,12 @@
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-		<n5.version>3.0.0</n5.version>
-		<n5-ij.version>3.2.4</n5-ij.version>
-		<n5-hdf5.version>2.0.0</n5-hdf5.version>
+		<n5.version>3.0.2</n5.version>
+		<n5-ij.version>3.2.6</n5-ij.version>
+		<n5-hdf5.version>2.0.1</n5-hdf5.version>
 		<n5-imglib2.version>7.0.0</n5-imglib2.version>
 		<n5-universe.version>1.1.1-SNAPSHOT</n5-universe.version>
+		<n5-zarr.version>1.0.1</n5-zarr.version>
 		<bigdataviewer-core.version>10.4.8</bigdataviewer-core.version>
 
 	</properties>
@@ -328,6 +329,10 @@
 			<groupId>xmlunit</groupId>
 			<artifactId>xmlunit</artifactId>
 			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-zarr</artifactId>
 		</dependency>
 	</dependencies>
 </project>
