--- a/pom.xml
+++ b/pom.xml
@@ -129,10 +129,13 @@
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
 		<n5.version>3.0.2</n5.version>
-		<n5-ij.version>3.2.6</n5-ij.version>
+		<n5-ij.version>3.2.6-SNAPSHOT</n5-ij.version>
 		<n5-hdf5.version>2.0.1</n5-hdf5.version>
+		<n5-aws-s3.version>4.0.1</n5-aws-s3.version>
+		<n5-google-cloud.version>4.0.0</n5-google-cloud.version>
 		<n5-imglib2.version>7.0.0</n5-imglib2.version>
 		<n5-universe.version>1.1.1-SNAPSHOT</n5-universe.version>
+		<n5-viewer_fiji.version>5.3.1</n5-viewer_fiji.version>
 		<n5-zarr.version>1.0.1</n5-zarr.version>
 		<bigdataviewer-core.version>10.4.8</bigdataviewer-core.version>
 
@@ -248,6 +251,22 @@
 		</dependency>
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-aws-s3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-google-cloud</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-viewer_fiji</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-zarr</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-universe</artifactId>
 			<version>${n5-universe.version}</version>
 		</dependency>
@@ -330,9 +349,6 @@
 			<artifactId>xmlunit</artifactId>
 			<version>1.5</version>
 		</dependency>
-		<dependency>
-			<groupId>org.janelia.saalfeldlab</groupId>
-			<artifactId>n5-zarr</artifactId>
-		</dependency>
+
 	</dependencies>
 </project>
