chore(ci): use xvfb

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Set up CI environment
         run: .github/setup.sh
       - name: Execute the build
+        uses: coactions/setup-xvfb@v1
         run: .github/build.sh
         env:
           GPG_KEY_NAME: ${{ secrets.GPG_KEY_NAME }}
