--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -21,4 +21,5 @@ jobs:
         run: .github/setup.sh
       - name: Execute the build
         uses: coactions/setup-xvfb@v1
-        run: .github/build.sh
+        with:
+          run: .github/build.sh
